--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -43,7 +43,7 @@ source:
 build:
   number: 12  # [win]
   number: 12  # [linux]
-  number: 13  # [osx]
+  number: 14  # [osx]
   detect_binary_files_with_prefix: true
   features:
     - vc{{ vc }} # [win]
@@ -77,6 +77,8 @@ requirements:
     # For fontconfig + freetype
     - pkg-config                         # [linux]
     - pthread-stubs                      # [linux]
+    # Probably only needed for WebEngine
+    - python 2.7*                        # [unix]
     - ruby                               # [linux]
     - bison                              # [linux]
     - flex                               # [linux]
